# minigrep

./: Cargo.toml  test.txt
src/: lib.rs  main.rs
